7 add modelversion ws (#8)
* feat: add ModelVersion WS

* chore: code refactoring and revised error management
