# docs/swagger.json
@@ -48,6 +48,116 @@
                 }
             }
         },
+        "/2.0/mlflow/model-versions/create": {
+            "post": {
+                "description": "Create a new model version",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create a new model version",
+                "operationId": "create-model-version",
+                "parameters": [
+                    {
+                        "description": "Register model under this name",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "URI indicating the location of the model artifacts",
+                        "name": "source",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "MLflow run ID for correlation, if source was generated by an experiment run in MLflow tracking server",
+                        "name": "run_id",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Additional metadata for model version",
+                        "name": "tags",
+                        "in": "body",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/modelversion.ModelVersionTag"
+                            }
+                        }
+                    },
+                    {
+                        "description": "MLflow run link - this is the exact link of the run that generated this model version, potentially hosted at another instance of MLflow",
+                        "name": "run_link",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Optional description for model version",
+                        "name": "description",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/modelversion.ModelVersion"
+                        }
+                    }
+                }
+            }
+        },
+        "/2.0/mlflow/model-versions/get": {
+            "get": {
+                "description": "Get metadata for a model version",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get metadata for a model version",
+                "operationId": "get-model-version",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name of the registered model",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Model version number",
+                        "name": "version",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/modelversion.ModelVersion"
+                        }
+                    }
+                }
+            }
+        },
         "/2.0/mlflow/registered-models/get": {
             "get": {
                 "description": "Get metadata for a registered model",
@@ -70,6 +180,27 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/registeredmodel.RegisteredModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/2.0/mlflow/runs/create": {
+            "post": {
+                "description": "Create a new run",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create a new run",
+                "operationId": "create-run",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/run.Run"
                         }
                     }
                 }
@@ -130,6 +261,83 @@
             }
         },
         "experiment.ExperimentTag": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "modelversion.ModelVersion": {
+            "type": "object",
+            "properties": {
+                "aliases": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "creation_timestamp": {
+                    "type": "integer"
+                },
+                "current_stage": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "last_updated_timestamp": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "run_id": {
+                    "type": "string"
+                },
+                "run_link": {
+                    "type": "string"
+                },
+                "source": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/modelversion.ModelVersionStatus"
+                },
+                "status_message": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/modelversion.ModelVersionTag"
+                    }
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "modelversion.ModelVersionStatus": {
+            "type": "string",
+            "enum": [
+                "PENDING_REGISTRATION",
+                "FAILED_REGISTRATION",
+                "READY"
+            ],
+            "x-enum-varnames": [
+                "PendingRegistration",
+                "FailedRegistration",
+                "Ready"
+            ]
+        },
+        "modelversion.ModelVersionTag": {
             "type": "object",
             "properties": {
                 "key": {
